# api/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2024_07_24_023242) do
+ActiveRecord::Schema[7.1].define(version: 2024_07_25_020444) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -161,6 +161,11 @@ ActiveRecord::Schema[7.1].define(version: 2024_07_24_023242) do
     t.datetime "updated_at", null: false
     t.bigint "validation_id", null: false
     t.string "visibility", null: false
+    t.string "progress", default: "waiting", null: false
+    t.string "result"
+    t.string "error_message"
+    t.datetime "started_at"
+    t.datetime "finished_at"
     t.index ["validation_id"], name: "index_submissions_on_validation_id", unique: true
   end
 
@@ -193,7 +198,7 @@ ActiveRecord::Schema[7.1].define(version: 2024_07_24_023242) do
   create_table "validations", force: :cascade do |t|
     t.bigint "user_id", null: false
     t.string "db", null: false
-    t.string "progress", null: false
+    t.string "progress", default: "waiting", null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.datetime "finished_at"
